# smp-tp10-noah-simon

./: CMakeLists.txt
include/: Calculator.h
src/: Calculator.cpp
tests/: mytestTP1.cpp  mytestTP2.cpp  testCalculator.cpp
